--- a/src/main/resources/templates/pagehome.html
+++ b/src/main/resources/templates/pagehome.html
@@ -191,7 +191,7 @@
 										<a href="productList.html">活动</a>
 									</li>
 									<li>
-										<a href="menu1.html">餐饮</a>
+										<a th:href="@{/menu/toquerymenu1}">餐饮</a>
 									</li>
 									<li>
 										<a href="hotel.html">住宿</a>
