--- a/src/main/resources/templates/hotelOrder.html
+++ b/src/main/resources/templates/hotelOrder.html
@@ -119,14 +119,18 @@
 					    <div> 价格：<input type="text" name="price"  readonly="readonly" class="jg" style="color: red;"></div>
 					    <div> 房号：<input type="text" readonly="readonly" class="fh" style="color: red;"></div>
 					    <div> 类型：<input type="text"readonly="readonly" class="lx" style="color: red;"></div>
-					    <div> 身份证号码：<input type="text" name="sfz" placeholder="请输入"></div>
+					    <div class="form-group" style="margin:0px 10px 0px 0px;">
+							<label for="exampleInputName2" style="color: black;">身份证号码:</label>
+							<input type="text" name="sfz"  class="form-control" id="exampleInputName2" placeholder="身份证号码">
+						</div>
 					     <input type="hidden" name="roomid" class="id">
-					     <div> 类型：
-					     	<select name="lx">
-					     		<option value="1">个人</option>
-					     		<option value="2">团队</option>
-					     	</select>
-					     </div>
+					     <div class="form-group" style="margin:0px 10px 0px 0px;">
+						<label for="exampleInputName2" style="color: black;">生成订单类型:</label>
+							<select name="lx" style="padding: 5px 5px 5px 10px; border-bottom-color: white;" class="form-control">
+			        		<option value="1">个人</option>
+			        		<option value="2">团队</option>
+			        		</select>
+						</div>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
@@ -167,7 +171,7 @@
     				var n=date.getFullYear();
     				var y=date.getMonth();
     				var r=date.getDate();
-    				var d=n+'-0'+(y+1)+'-'+r;
+    				var d=n+'-0'+(y+1)+'-0'+r;
     				if(ksdata<d){
     					alert("开始时间必须大于当前日期");
     					return false;
@@ -209,7 +213,8 @@
     				var n=date.getFullYear();
     				var y=date.getMonth();
     				var r=date.getDate();
-    				var d=n+'-0'+(y+1)+'-'+r;
+    				var d=n+'-0'+(y+1)+'-0'+r;
+    				
     				if(ksdata<d){
     					alert("开始时间必须大于当前日期");
     					return false;
